// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormRow is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormRow testClass1 testClass2"
  data-test-subj="test subject string"
>
  <input
    id="generated-id"
  />
</div>
`;

exports[`EuiFormRow props label is rendered 1`] = `
<div
  class="euiFormRow"
>
  <eui_form_label
    for="generated-id"
  >
    label
  </eui_form_label>
  <input
    id="generated-id"
  />
</div>
`;

exports[`EuiFormRow props onBlur behavior onBlur is called in child 1`] = `
<EuiFormRow
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
>
  <div
    className="euiFormRow"
  >
    <eui_form_label
      htmlFor="generated-id"
      isFocused={false}
      isInvalid={undefined}
    >
      <span>
        Label
      </span>
    </eui_form_label>
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow props onBlur behavior onBlur works in parent even if not in child 1`] = `
<EuiFormRow
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
>
  <div
    className="euiFormRow"
  >
    <eui_form_label
      htmlFor="generated-id"
      isFocused={false}
      isInvalid={undefined}
    >
      <span>
        Label
      </span>
    </eui_form_label>
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow props onFocus behavior onFocus is called in child 1`] = `
<EuiFormRow
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
>
  <div
    className="euiFormRow"
  >
    <eui_form_label
      htmlFor="generated-id"
      isFocused={true}
      isInvalid={undefined}
    >
      <span>
        Label
      </span>
    </eui_form_label>
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow props onFocus behavior onFocus works in parent even if not in child 1`] = `
<EuiFormRow
  fullWidth={false}
  hasEmptyLabelSpace={false}
  label={
    <span>
      Label
    </span>
  }
>
  <div
    className="euiFormRow"
  >
    <eui_form_label
      htmlFor="generated-id"
      isFocused={true}
      isInvalid={undefined}
    >
      <span>
        Label
      </span>
    </eui_form_label>
    <input
      id="generated-id"
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</EuiFormRow>
`;

exports[`EuiFormRow props props error as array is rendered 1`] = `
<div
  class="euiFormRow"
>
  <input
    aria-describedby="generated-id-error-0 generated-id-error-1"
    id="generated-id"
  />
  <eui_form_error_text
    class="euiFormRow__text"
    id="generated-id-error-0"
  >
    Error
  </eui_form_error_text>
  <eui_form_error_text
    class="euiFormRow__text"
    id="generated-id-error-1"
  >
    Error2
  </eui_form_error_text>
</div>
`;

exports[`EuiFormRow props props error as string is rendered 1`] = `
<div
  class="euiFormRow"
>
  <input
    aria-describedby="generated-id-error-0"
    id="generated-id"
  />
  <eui_form_error_text
    class="euiFormRow__text"
    id="generated-id-error-0"
  >
    Error
  </eui_form_error_text>
</div>
`;

exports[`EuiFormRow props props fullWidth is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--fullWidth"
>
  <input
    id="generated-id"
  />
</div>
`;

exports[`EuiFormRow props props hasEmptyLabelSpace is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--hasEmptyLabelSpace"
>
  <input
    id="generated-id"
  />
</div>
`;

exports[`EuiFormRow props props helpText is rendered 1`] = `
<div
  class="euiFormRow"
>
  <input
    aria-describedby="generated-id-help"
    id="generated-id"
  />
  <eui_form_help_text
    class="euiFormRow__text"
    id="generated-id-help"
  >
    <span>
      This is help text.
    </span>
  </eui_form_help_text>
</div>
`;

exports[`EuiFormRow props props id is rendered 1`] = `
<div
  class="euiFormRow"
  id="id"
>
  <input
    id="id"
  />
</div>
`;

exports[`EuiFormRow props props isInvalid is rendered 1`] = `
<div
  class="euiFormRow"
>
  <input
    id="generated-id"
  />
</div>
`;
